Lo que se me olvidó darle commit en clase

--- a/tablas.html
+++ b/tablas.html
@@ -27,6 +27,9 @@
                 Mostrar tabla
             </button>
         </div>
+        <div id="imprimir">
+            
+        </div>
     </div>
 </body>
 </html>
