Inserción del select en la calculadora

--- a/calculadora.html
+++ b/calculadora.html
@@ -20,9 +20,15 @@
             id="num2">
         </div>
         <div>
-            <label for="">Operación</label>
+<!--             <label for="">Operación</label>
             <input type="text" name="op" 
-            id="op">
+            id="op"> -->
+            <select name="op" id="op">
+                <option value="+">+</option>
+                <option value="-">-</option>
+                <option value="x">x</option>
+                <option value="/">÷</option>
+            </select>
         </div>
         <div>
             <label for="">Resultado</label>
