Se inserta el índice y la navegación entre el mismo y los demás ejercicios

--- a/js4.html
+++ b/js4.html
@@ -7,6 +7,10 @@
     <title>js4</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Volver</a>
+    </header>
+    <hr>
     <h1>Jasvascript funciones</h1>
     <div>
         <div>
