--- a/numperfectos.html
+++ b/numperfectos.html
@@ -7,6 +7,10 @@
     <title>Numeros perfectos</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Volver</a>
+    </header>
+    <hr>
     <h1>Números perfectos</h1>
     <div>
         <label for="">Escribe la cantidad de números perfectos que desees: </label>
