--- a/practica.html
+++ b/practica.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Volver</a>
+    </header>
+    <hr>
     <h1>Practica</h1>
     <script src="practica.js"></script> 
 </body>
