--- a/tablas.html
+++ b/tablas.html
@@ -7,6 +7,10 @@
     <title>Tablas</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Volver</a>
+    </header>
+    <hr>
     <h1>Tablas</h1>
     <script src="tablas.js"></script>
     <div>
