--- a/calculadora.html
+++ b/calculadora.html
@@ -7,6 +7,9 @@
     <title>Calculadora</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">Volver</a>
+    </header>
     <h1>Calculadora</h1>
     <div>
         <div>
